--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -35,6 +35,7 @@ msgstr ""
 "PO-Revision-Date: 2009-07-23 09:00+0100\n"
 "Last-Translator: Francisco Javier Cuadrado <fcocuadrado@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -54,46 +55,76 @@ msgstr "Reino predeterminado de la versión 5 de Kerberos:"
 #. Type: string
 #. Description
 #: ../krb5-config.templates:2001
-#| msgid ""
-#| "When users attempt to use Kerberos and specify a principal or user name "
-#| "without specifying what administrative Kerberos realm that principal "
-#| "belongs to, the system appends the default realm.  Normally, the default "
-#| "realm is the uppercase version of the local DNS domain."
-msgid "When users attempt to use Kerberos and specify a principal or user name without specifying what administrative Kerberos realm that principal belongs to, the system appends the default realm.  The default realm may also be used as the realm of a Kerberos service running on the local machine.  Often, the default realm is the uppercase version of the local DNS domain."
-msgstr "Cuando los usuarios intentan usar Kerberos y especifican un nombre principal o de usuario sin aclarar a qué dominio administrativo de Kerberos pertenece el principal, el sistema toma el reino predeterminado. El reino predeterminado también se puede utilizar como el reino de un servicio de Kerberos que se ejecute en la máquina local. Normalmente, el reino predeterminado es el nombre en mayúsculas del dominio del DNS local."
+msgid ""
+"When users attempt to use Kerberos and specify a principal or user name "
+"without specifying what administrative Kerberos realm that principal belongs "
+"to, the system appends the default realm.  The default realm may also be "
+"used as the realm of a Kerberos service running on the local machine.  "
+"Often, the default realm is the uppercase version of the local DNS domain."
+msgstr ""
+"Cuando los usuarios intentan usar Kerberos y especifican un nombre principal "
+"o de usuario sin aclarar a qué dominio administrativo de Kerberos pertenece "
+"el principal, el sistema toma el reino predeterminado. El reino "
+"predeterminado también se puede utilizar como el reino de un servicio de "
+"Kerberos que se ejecute en la máquina local. Normalmente, el reino "
+"predeterminado es el nombre en mayúsculas del dominio del DNS local."
 
 #. Type: boolean
 #. Description
 #: ../krb5-config.templates:5001
 msgid "Add locations of default Kerberos servers to /etc/krb5.conf?"
-msgstr "¿Desea añadir ubicaciones de los servidores predeterminados de Kerberos al archivo «/etc/krb5.conf»?"
+msgstr ""
+"¿Desea añadir ubicaciones de los servidores predeterminados de Kerberos al "
+"archivo «/etc/krb5.conf»?"
 
 #. Type: boolean
 #. Description
 #: ../krb5-config.templates:5001
-msgid "Typically, clients find Kerberos servers for their default realm in the domain-name system. ${dns}"
-msgstr "Normalmente, los clientes encuentran los servidores de Kerberos para su reino predeterminado mediante el sistema de nombres de dominio. ${dns}"
+msgid ""
+"Typically, clients find Kerberos servers for their default realm in the "
+"domain-name system. ${dns}"
+msgstr ""
+"Normalmente, los clientes encuentran los servidores de Kerberos para su "
+"reino predeterminado mediante el sistema de nombres de dominio. ${dns}"
 
 #. Type: text
 #. Description
 #. Type: text
 #. Description
-#: ../krb5-config.templates:6001
-#: ../krb5-config.templates:7001
+#: ../krb5-config.templates:6001 ../krb5-config.templates:7001
 msgid "short description unused"
 msgstr "descripción corta sin utilizar"
 
 #. Type: text
 #. Description
 #: ../krb5-config.templates:6001
-msgid "However, the Kerberos servers for your realm do not appear to be listed either in the domain-name system or the kerberos configuration file shipped with Debian. You may add them to the Kerberos configuration file or add them to your DNS configuration."
-msgstr "Sin embargo, los servidores de Kerberos para su reino no parecen estar ni en el sistema de nombres de dominio ni en el archivo de configuración de Kerberos que viene con Debian. Debería añadirlos al archivo de configuración de Kerberos o a su configuración del DNS."
+msgid ""
+"However, the Kerberos servers for your realm do not appear to be listed "
+"either in the domain-name system or the kerberos configuration file shipped "
+"with Debian. You may add them to the Kerberos configuration file or add them "
+"to your DNS configuration."
+msgstr ""
+"Sin embargo, los servidores de Kerberos para su reino no parecen estar ni en "
+"el sistema de nombres de dominio ni en el archivo de configuración de "
+"Kerberos que viene con Debian. Debería añadirlos al archivo de configuración "
+"de Kerberos o a su configuración del DNS."
 
 #. Type: text
 #. Description
 #: ../krb5-config.templates:7001
-msgid "Servers for your realm were found in DNS. For most configurations it is best to use DNS to find these servers so that if the set of servers for your realm changes, you need not reconfigure each machine in the realm. However, in special situations, you can locally configure the set of servers for your Kerberos realm."
-msgstr "Los servidores para su reino se encontraron en el DNS. Para la mayoría de las configuraciones es mejor utilizar el DNS para encontrar estos servidores, de modo que si el conjunto de servidores de su reino cambia, no necesitará reconfigurar cada máquina en el reino. Sin embargo, en situaciones especiales, puede configurar localmente el conjunto de servidores para su reino de Kerberos."
+msgid ""
+"Servers for your realm were found in DNS. For most configurations it is best "
+"to use DNS to find these servers so that if the set of servers for your "
+"realm changes, you need not reconfigure each machine in the realm. However, "
+"in special situations, you can locally configure the set of servers for your "
+"Kerberos realm."
+msgstr ""
+"Los servidores para su reino se encontraron en el DNS. Para la mayoría de "
+"las configuraciones es mejor utilizar el DNS para encontrar estos "
+"servidores, de modo que si el conjunto de servidores de su reino cambia, no "
+"necesitará reconfigurar cada máquina en el reino. Sin embargo, en "
+"situaciones especiales, puede configurar localmente el conjunto de "
+"servidores para su reino de Kerberos."
 
 #. Type: string
 #. Description
@@ -104,8 +135,12 @@ msgstr "Servidores de Kerberos para su reino:"
 #. Type: string
 #. Description
 #: ../krb5-config.templates:8001
-msgid "Enter the hostnames of Kerberos servers in the ${realm} Kerberos realm separated by spaces."
-msgstr "Introduzca los nombres de los servidores Kerberos en el reino ${realm} de Kerberos, separados por espacios."
+msgid ""
+"Enter the hostnames of Kerberos servers in the ${realm} Kerberos realm "
+"separated by spaces."
+msgstr ""
+"Introduzca los nombres de los servidores Kerberos en el reino ${realm} de "
+"Kerberos, separados por espacios."
 
 #. Type: string
 #. Description
@@ -116,13 +151,19 @@ msgstr "Servidor administrativo para su reino de Kerberos:"
 #. Type: string
 #. Description
 #: ../krb5-config.templates:9001
-msgid "Enter the hostname of the administrative (password changing) server for the ${realm} Kerberos realm."
-msgstr "Introduzca el nombre del servidor administrativo (cambio de contraseña) para el reino ${realm} de Kerberos."
+msgid ""
+"Enter the hostname of the administrative (password changing) server for the "
+"${realm} Kerberos realm."
+msgstr ""
+"Introduzca el nombre del servidor administrativo (cambio de contraseña) para "
+"el reino ${realm} de Kerberos."
 
 #~ msgid "Default Kerberos version 4 realm:"
 #~ msgstr "Dominio predeterminado de la versión 4 de Kerberos:"
+
 #~ msgid "Does DNS contain pointers to your realm's Kerberos Servers?"
 #~ msgstr "¿El DNS contiene punteros a su dominio de Servidores Kerberos?"
+
 #~ msgid ""
 #~ "Traditionally, new realms have been added to /etc/krb.conf so that "
 #~ "clients can find the Kerberos servers for the realm.  Modern Kerberos "
@@ -138,12 +179,14 @@ msgstr "Introduzca el nombre del servidor administrativo (cambio de contraseña)
 #~ "predeterminado los tiene De lo contrario, si su dominio no está aún en «/"
 #~ "etc/krb.conf», se le preguntará por los nombres de los servidores "
 #~ "Kerberos para que se pueda añadir el dominio."
+
 #~ msgid ""
 #~ "Enter the hostnames of Kerberos version 4 servers in the ${realm} "
 #~ "Kerberos realm, separated by spaces."
 #~ msgstr ""
 #~ "Introduzca los nombres de los servidores Kerberos versión 4 en el dominio "
 #~ "${realm} de Kerberos, separados por espacio."
+
 #~ msgid ""
 #~ "Traditionally new realms have been added to /etc/krb5.conf so that "
 #~ "clients can find the Kerberos servers for the realm.  Modern Kerberos "
@@ -159,4 +202,3 @@ msgstr "Introduzca el nombre del servidor administrativo (cambio de contraseña)
 #~ "predeterminado los tiene De lo contrario, si su dominio no está aún en «/"
 #~ "etc/krb5.conf», se le preguntará por los nombres de los servidores "
 #~ "Kerberos para que se pueda añadir el dominio."
-
