--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -12,11 +12,13 @@ msgstr ""
 "PO-Revision-Date: 2009-07-23 22:07+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: title
 #. Description
@@ -33,11 +35,6 @@ msgstr "Область по умолчанию для Kerberos версии 5:"
 #. Type: string
 #. Description
 #: ../krb5-config.templates:2001
-#| msgid ""
-#| "When users attempt to use Kerberos and specify a principal or user name "
-#| "without specifying what administrative Kerberos realm that principal "
-#| "belongs to, the system appends the default realm.  Normally, the default "
-#| "realm is the uppercase version of the local DNS domain."
 msgid ""
 "When users attempt to use Kerberos and specify a principal or user name "
 "without specifying what administrative Kerberos realm that principal belongs "
@@ -47,11 +44,10 @@ msgid ""
 msgstr ""
 "Когда пользователи пытаются использовать Kerberos и указывают принципала или "
 "пользовательское имя без административной области Kerberos, которому "
-"принадлежит принципал, то система добавляет область по умолчанию. "
-"Область по умолчанию может также использоваться в качестве области службы "
-"Kerberos, запущенной на локальной машине. "
-"Часто, областью по умолчанию является имя локального домена DNS, записанное в "
-"верхнем регистре."
+"принадлежит принципал, то система добавляет область по умолчанию. Область по "
+"умолчанию может также использоваться в качестве области службы Kerberos, "
+"запущенной на локальной машине. Часто, областью по умолчанию является имя "
+"локального домена DNS, записанное в верхнем регистре."
 
 #. Type: boolean
 #. Description
@@ -66,8 +62,8 @@ msgid ""
 "Typically, clients find Kerberos servers for their default realm in the "
 "domain-name system. ${dns}"
 msgstr ""
-"Обычно, клиенты находят серверы Kerberos для своей области по умолчанию "
-"в системе доменных имён. ${dns}"
+"Обычно, клиенты находят серверы Kerberos для своей области по умолчанию в "
+"системе доменных имён. ${dns}"
 
 #. Type: text
 #. Description
@@ -87,8 +83,8 @@ msgid ""
 "to your DNS configuration."
 msgstr ""
 "Однако, кажется, серверы Kerberos вашей области не описаны, ни в системе "
-"доменных имён, ни в файле настройки kerberos, поставляемого в Debian. "
-"Вы можете добавить их в файл настройки Kerberos или в настройку DNS."
+"доменных имён, ни в файле настройки kerberos, поставляемого в Debian. Вы "
+"можете добавить их в файл настройки Kerberos или в настройку DNS."
 
 #. Type: text
 #. Description
@@ -100,11 +96,10 @@ msgid ""
 "in special situations, you can locally configure the set of servers for your "
 "Kerberos realm."
 msgstr ""
-"Серверы для вашей области найдены в DNS. В большинстве случаев, "
-"для поиска серверов лучше использовать DNS, чтобы при изменении серверов, "
-"ответственных за область, не нужно было перенастраивать каждую машину "
-"области. Однако, в некоторых случаях, вы можете задать серверы области "
-"Kerberos локально."
+"Серверы для вашей области найдены в DNS. В большинстве случаев, для поиска "
+"серверов лучше использовать DNS, чтобы при изменении серверов, ответственных "
+"за область, не нужно было перенастраивать каждую машину области. Однако, в "
+"некоторых случаях, вы можете задать серверы области Kerberos локально."
 
 #. Type: string
 #. Description
@@ -137,4 +132,3 @@ msgid ""
 msgstr ""
 "Введите имя хоста управляющего (изменение пароля) сервера для области "
 "Kerberos ${realm}."
-
