--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-07-25 18:46+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -30,11 +31,6 @@ msgstr "Výchozí říše Kerbera verze 5:"
 #. Type: string
 #. Description
 #: ../krb5-config.templates:2001
-#| msgid ""
-#| "When users attempt to use Kerberos and specify a principal or user name "
-#| "without specifying what administrative Kerberos realm that principal "
-#| "belongs to, the system appends the default realm.  Normally, the default "
-#| "realm is the uppercase version of the local DNS domain."
 msgid ""
 "When users attempt to use Kerberos and specify a principal or user name "
 "without specifying what administrative Kerberos realm that principal belongs "
@@ -44,8 +40,9 @@ msgid ""
 msgstr ""
 "Když se uživatelé pokusí použít Kerberos a zadají pouze uživatelské jméno "
 "nebo identifikátor bez určení říše, do které patří, systém za jméno připojí "
-"výchozí říši. Výchozí říše se dá také použít jako říše pro kerberos službu běžící "
-"na lokálním počítači. Obvykle to bývá lokální DNS doména zapsaná velkými písmeny."
+"výchozí říši. Výchozí říše se dá také použít jako říše pro kerberos službu "
+"běžící na lokálním počítači. Obvykle to bývá lokální DNS doména zapsaná "
+"velkými písmeny."
 
 #. Type: boolean
 #. Description
@@ -60,8 +57,8 @@ msgid ""
 "Typically, clients find Kerberos servers for their default realm in the "
 "domain-name system. ${dns}"
 msgstr ""
-"Klienti typicky hledají Kerberos servery pro svou výchozí říši v DNS (doménovém "
-"jmenném systému). ${dns}"
+"Klienti typicky hledají Kerberos servery pro svou výchozí říši v DNS "
+"(doménovém jmenném systému). ${dns}"
 
 #. Type: text
 #. Description
@@ -81,8 +78,8 @@ msgid ""
 "to your DNS configuration."
 msgstr ""
 "Nicméně se zdá, že Kerberos servery ve vaší říši nejsou uvedeny ani v DNS "
-"(doménovém jmenném systému) ani v konfiguračním souboru. Měli byste je přidat "
-"do konfiguračního souboru Kerbera, nebo do DNS."
+"(doménovém jmenném systému) ani v konfiguračním souboru. Měli byste je "
+"přidat do konfiguračního souboru Kerbera, nebo do DNS."
 
 #. Type: text
 #. Description
@@ -94,11 +91,11 @@ msgid ""
 "in special situations, you can locally configure the set of servers for your "
 "Kerberos realm."
 msgstr ""
-"Servery vaší říše byly nalezeny v DNS (doménovém jmenném systému). Pro většinu "
-"konfigurací je nejvhodnější použít pro hledání Kerberos serverů DNS, protože "
-"pokud se množina Kerberos serverů změní, nebudete muset upravovat každý počítač "
-"v říši. Nic vám však nebrání nastavit množinu Kerberos serverů pro danou říši "
-"lokálně na daném počítači."
+"Servery vaší říše byly nalezeny v DNS (doménovém jmenném systému). Pro "
+"většinu konfigurací je nejvhodnější použít pro hledání Kerberos serverů DNS, "
+"protože pokud se množina Kerberos serverů změní, nebudete muset upravovat "
+"každý počítač v říši. Nic vám však nebrání nastavit množinu Kerberos serverů "
+"pro danou říši lokálně na daném počítači."
 
 #. Type: string
 #. Description
