--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -13,6 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2009-07-29 00:59+0200\n"
 "Last-Translator: Bruno Travouillon <debian@travouillon.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -34,11 +35,6 @@ msgstr "Royaume (« realm ») Kerberos version 5 par défaut :"
 #. Type: string
 #. Description
 #: ../krb5-config.templates:2001
-#| msgid ""
-#| "When users attempt to use Kerberos and specify a principal or user name "
-#| "without specifying what administrative Kerberos realm that principal "
-#| "belongs to, the system appends the default realm.  Normally, the default "
-#| "realm is the uppercase version of the local DNS domain."
 msgid ""
 "When users attempt to use Kerberos and specify a principal or user name "
 "without specifying what administrative Kerberos realm that principal belongs "
