--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-07-22 22:05+0200\n"
 "Last-Translator: Marce Villarino <mvillarino@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -32,11 +33,6 @@ msgstr "Reino predeterminado de Kerberos versión 5:"
 #. Type: string
 #. Description
 #: ../krb5-config.templates:2001
-#| msgid ""
-#| "When users attempt to use Kerberos and specify a principal or user name "
-#| "without specifying what administrative Kerberos realm that principal "
-#| "belongs to, the system appends the default realm.  Normally, the default "
-#| "realm is the uppercase version of the local DNS domain."
 msgid ""
 "When users attempt to use Kerberos and specify a principal or user name "
 "without specifying what administrative Kerberos realm that principal belongs "
@@ -46,18 +42,18 @@ msgid ""
 msgstr ""
 "Cando os usuarios tentan empregar Kerberos e especifican un principal ou "
 "nome de usuario sen especificar o reino administrativo de Kerberos ao que "
-"pertence ese principal, o sistema engade o reino predeterminado. Este "
-"tamén pode empregarse como o reino dun servizo Kerbereos en execución na "
-"máquina local. Normalmente, o reino predeterminado é a versión en maiúsculas "
-"do dominio DNS local."
+"pertence ese principal, o sistema engade o reino predeterminado. Este tamén "
+"pode empregarse como o reino dun servizo Kerbereos en execución na máquina "
+"local. Normalmente, o reino predeterminado é a versión en maiúsculas do "
+"dominio DNS local."
 
 #. Type: boolean
 #. Description
 #: ../krb5-config.templates:5001
 msgid "Add locations of default Kerberos servers to /etc/krb5.conf?"
 msgstr ""
-"Desexa engadir as localizacións dos servidores Kerberos predeterminados "
-"a /etc/krb5.conf?"
+"Desexa engadir as localizacións dos servidores Kerberos predeterminados a /"
+"etc/krb5.conf?"
 
 #. Type: boolean
 #. Description
@@ -88,9 +84,8 @@ msgid ""
 msgstr ""
 "Porén, os servidores Kerberos do seu reino non semellan estar nin na lista "
 "do sistema de nomes de dominio nin na do ficheiro de configuración de "
-"Kerberos "
-"fornecido en Debian. Pode engadilos ao ficheiro de configuración de Kerberos "
-"ou á configuración do DNS."
+"Kerberos fornecido en Debian. Pode engadilos ao ficheiro de configuración de "
+"Kerberos ou á configuración do DNS."
 
 #. Type: text
 #. Description
@@ -102,12 +97,11 @@ msgid ""
 "in special situations, you can locally configure the set of servers for your "
 "Kerberos realm."
 msgstr ""
-"Os servidores do seu reino acháronse no DNS. Na maioría das configuracións "
-"é mellor empregar DNS para atopar estes servidores de maneira que de mudar o "
+"Os servidores do seu reino acháronse no DNS. Na maioría das configuracións é "
+"mellor empregar DNS para atopar estes servidores de maneira que de mudar o "
 "conxunto de servidores do seu reino non ha precisar reconfigurar cada "
-"máquina "
-"do reino. Porén, en situacións especiais pode configurar localmente o "
-"conxunto de servidores do reino Kerberos."
+"máquina do reino. Porén, en situacións especiais pode configurar localmente "
+"o conxunto de servidores do reino Kerberos."
 
 #. Type: string
 #. Description
