--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -1,55 +1,37 @@
-# translation of kerberos-configs_1.9_templates.po to Dutch
-#
+# Dutch translation of kerberos-configs debconf templates.
+# Copyright (C) 2006-2012 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the kerberos-configs package.
-# Please see debian/copyright.
-#
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#    Some information specific to po-debconf are available at
-#            /usr/share/doc/po-debconf/README-trans
-#         or http://www.debian.org/intl/l10n/po-debconf/README-trans#
-#    Developers do not need to manually edit POT or PO files.
-#
 # Kurt De Bree <kdebree(AT)telenet(DOT)be>, 2006.
-# This is an unofficial translation
+# Jeroen Schot <schot@a-eskwadraat.nl>, 2012.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: kerberos-configs_1.9_templates\n"
+"Project-Id-Version: kerberos-configs 2.2\n"
 "Report-Msgid-Bugs-To: kerberos-configs@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-21 13:57-0400\n"
-"PO-Revision-Date: 2006-06-28 16:05+0100\n"
-"Last-Translator: Kurt De Bree <kdebree(AT)telenet(DOT)be>\n"
-"Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
+"PO-Revision-Date: 2012-01-02 11:33+0100\n"
+"Last-Translator: Jeroen Schot <schot@a-eskwadraat.nl>\n"
+"Language-Team: Debian l10n Dutch <debian-l10n-dutch@lists.debian.org>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.1\n"
 
 #. Type: title
 #. Description
 #: ../krb5-config.templates:1001
 msgid "Configuring Kerberos Authentication"
-msgstr ""
+msgstr "Kerberos-authenticatie instellen"
 
 #. Type: string
 #. Description
 #: ../krb5-config.templates:2001
 msgid "Default Kerberos version 5 realm:"
-msgstr "Standaard Kerberos5-gebied?"
+msgstr "Standaard gebied voor Kerberos versie 5?"
 
 #. Type: string
 #. Description
 #: ../krb5-config.templates:2001
-#, fuzzy
-#| msgid ""
-#| "When users attempt to use Kerberos and specify a principal or user name "
-#| "without specifying what administrative Kerberos realm that principal "
-#| "belongs to, the system appends the default realm.  Normally, the default "
-#| "realm is the uppercase version of the local DNS domain."
 msgid ""
 "When users attempt to use Kerberos and specify a principal or user name "
 "without specifying what administrative Kerberos realm that principal belongs "
@@ -60,14 +42,15 @@ msgstr ""
 "Als gebruikers Kerberos proberen te gebruiken en een principal of "
 "gebruikersnaam specificeren zonder te omschrijven tot welk administratief "
 "gebied (realm) de principal behoort, zal het systeem het standaardgebied "
-"achteraan toevoegen. Normaal is het standaardgebied de hoofdletterversie van "
-"het lokale DNS-domein."
+"achteraan toevoegen. Het standaardgebied kan ook worden gebruik als het "
+"gebied voor de Kerberos-dienst die op de lokale computer wordt uitgevoerd. "
+"Vaak is het standaardgebied de hoofdletterversie van het lokale DNS-domein."
 
 #. Type: boolean
 #. Description
 #: ../krb5-config.templates:5001
 msgid "Add locations of default Kerberos servers to /etc/krb5.conf?"
-msgstr ""
+msgstr "Locaties van standaard Kerberos-servers toevoegen aan /etc/krb5.conf?"
 
 #. Type: boolean
 #. Description
@@ -76,6 +59,8 @@ msgid ""
 "Typically, clients find Kerberos servers for their default realm in the "
 "domain-name system. ${dns}"
 msgstr ""
+"Meestal vinden clienten de Kerberos-servers voor hun standaardgebied in het "
+"domeinnaamsysteem (DNS). ${dns}"
 
 #. Type: text
 #. Description
@@ -83,7 +68,7 @@ msgstr ""
 #. Description
 #: ../krb5-config.templates:6001 ../krb5-config.templates:7001
 msgid "short description unused"
-msgstr ""
+msgstr "korte omschrijving niet gebruikt"
 
 #. Type: text
 #. Description
@@ -94,6 +79,10 @@ msgid ""
 "with Debian. You may add them to the Kerberos configuration file or add them "
 "to your DNS configuration."
 msgstr ""
+"Maar het lijkt erop dat de Kerberos-servers voor uw gebied niet in DNS staat "
+"en niet voorkomt in het Kerberos-configuratiebestand dat door Debian is "
+"meegeleverd. U kunt ze toeveogen aan het Kerberos-configuratiebestand of "
+"toevoegen aan uw DNS-configuratie."
 
 #. Type: text
 #. Description
@@ -105,6 +94,11 @@ msgid ""
 "in special situations, you can locally configure the set of servers for your "
 "Kerberos realm."
 msgstr ""
+"De servers voor uw gebied zijn gevonden in DNS. Voor de meeste opstellingen "
+"is het het best om DNS te gebruiken voor het vinden van deze servers zodat "
+"de configuratie niet aangepast hoeft te worden wanneer de groep servers van "
+"uw gebied veranderen. Maar in speciale omstandigheden kunt u de groep "
+"servers van uw Kerberos-gebied lokaal instellen."
 
 #. Type: string
 #. Description
@@ -136,49 +130,4 @@ msgid ""
 "${realm} Kerberos realm."
 msgstr ""
 "Geef de computernaam van de administratieve server (wijziging wachtwoorden) "
-"voor het ${realm} Kerberos-gebied."
-
-#~ msgid "Default Kerberos version 4 realm:"
-#~ msgstr "Standaard Kerberos4-gebied:"
-
-#~ msgid "Does DNS contain pointers to your realm's Kerberos Servers?"
-#~ msgstr "Bevat het DNS verwijzingen naar de Kerberos-servers van uw gebied?"
-
-#~ msgid ""
-#~ "Traditionally, new realms have been added to /etc/krb.conf so that "
-#~ "clients can find the Kerberos servers for the realm.  Modern Kerberos "
-#~ "implementations sometimes support looking this information up using DNS. "
-#~ "If your default realm has DNS pointers, they will be used.  Otherwise, if "
-#~ "your realm is not already in /etc/krb.conf, you will be asked for the "
-#~ "Kerberos servers' hostnames so the realm can be added."
-#~ msgstr ""
-#~ "Traditioneel werden nieuwe gebieden toegevoegd aan /etc/krb.conf zodat "
-#~ "clients de Kerberos-servers voor het gebied vinden. Soms ondersteunen "
-#~ "moderne Kerberos-implementaties het opzoeken van deze informatie via DNS. "
-#~ "Indien uw standaardgebied verwijzingen naar het DNS bevat, zullen deze "
-#~ "worden gebruikt. Anderzijds, als uw gebied nog niet opgenomen is in /etc/"
-#~ "krb.conf, zal u naar de computernamen van de Kerberos-servers gevraagd "
-#~ "worden zodat het gebied kan worden toegevoegd."
-
-#~ msgid ""
-#~ "Enter the hostnames of Kerberos version 4 servers in the ${realm} "
-#~ "Kerberos realm, separated by spaces."
-#~ msgstr ""
-#~ "Geef de computernamen, door spaties gescheiden, van de Kerberos4-servers "
-#~ "in het ${realm} Kerberos-gebied."
-
-#~ msgid ""
-#~ "Traditionally new realms have been added to /etc/krb5.conf so that "
-#~ "clients can find the Kerberos servers for the realm.  Modern Kerberos "
-#~ "implementations support looking this information up using DNS.  If your "
-#~ "default realm has DNS pointers, they will be used.  Otherwise, if your "
-#~ "realm is not already in /etc/krb5.conf, you will be asked for the "
-#~ "Kerberos servers' hostnames so the realm can be added."
-#~ msgstr ""
-#~ "Traditioneel werden nieuwe gebieden toegevoegd aan /etc/krb5.conf zodat "
-#~ "clients de Kerberos-servers voor het gebied vindt. Moderne Kerberos-"
-#~ "implementaties ondersteunen het opzoeken van deze informatie via DNS. "
-#~ "Indien uw standaardgebied verwijzingen naar het DNS bevat, zullen deze "
-#~ "worden gebruikt. Anderzijds, als uw gebied nog niet opgenomen is in /etc/"
-#~ "krb5.conf, zal u naar de computernamen van de Kerberos-servers gevraagd "
-#~ "worden zodat het gebied kan worden toegevoegd."
+"voor het Kerberos-gebied ${realm}."
