--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2006-12-17 20:12-0200\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team: Debian-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
